// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. icontwitter sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 62.5,
    }
  }
/>
`;

exports[`2. iconvideo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 48.608695652173914,
      "width": 86,
    }
  }
/>
`;

exports[`3. iconemail sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 68.75,
    }
  }
/>
`;

exports[`4. iconstar sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`5. iconfacebook sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 25,
    }
  }
/>
`;

exports[`6. thetimeslogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;
